--- a/themes/hugo-future-imperfect-slim/exampleSite/staticman.yml
+++ b/themes/hugo-future-imperfect-slim/exampleSite/staticman.yml
@@ -37,7 +37,7 @@ comments:
   moderation: false
 
   # Name of the site. Used in notification emails.
-  name: ""
+  name: "Sheer Lush"
 
   # (*) REQUIRED
   #
